# ibus-table-chinese

./: .gitignore
tables/: CMakeLists.txt
tables/cangjie/: CMakeLists.txt
tables/quick/: CMakeLists.txt
tools/: ibus-table-preprocess.py
